# serializer version: 1
# name: test_entities[climate-room_sensors][climate.heating_circuit_1_patterilammitys-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.OFF: 'off'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 50.0,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 5.0,
      <ClimateEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
        'automatic',
        'temperature_drop',
        'big_temperature_drop',
      ]),
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 0.1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.heating_circuit_1_patterilammitys',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'ouman_eh_800',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 401>,
    'translation_key': 'heating_circuit',
    'unique_id': '01JABCDEFGHIJKLMNOPQRSTUVW_l1_climate',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[climate-room_sensors][climate.heating_circuit_1_patterilammitys-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <ClimateEntityStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: 21.5,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Heating circuit 1 Patterilämmitys',
      <ClimateEntityStateAttribute.HVAC_ACTION: 'hvac_action'>: <HVACAction.HEATING: 'heating'>,
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.OFF: 'off'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 50.0,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 5.0,
      <ClimateEntityStateAttribute.PRESET_MODE: 'preset_mode'>: 'automatic',
      <ClimateEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
        'automatic',
        'temperature_drop',
        'big_temperature_drop',
      ]),
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ClimateEntityFeature: 401>,
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 0.1,
      <ClimateEntityStateAttribute.TARGET_TEMPERATURE: 'temperature'>: 21.0,
    }),
    'context': <ANY>,
    'entity_id': 'climate.heating_circuit_1_patterilammitys',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'heat',
  })
# ---
# name: test_entities[climate-room_sensors][climate.heating_circuit_2_lattialammitys-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.OFF: 'off'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 50.0,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 5.0,
      <ClimateEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
        'automatic',
        'temperature_drop',
        'big_temperature_drop',
      ]),
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 0.1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.heating_circuit_2_lattialammitys',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'ouman_eh_800',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 401>,
    'translation_key': 'heating_circuit',
    'unique_id': '01JABCDEFGHIJKLMNOPQRSTUVW_l2_climate',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[climate-room_sensors][climate.heating_circuit_2_lattialammitys-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <ClimateEntityStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: 22.0,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Heating circuit 2 Lattialämmitys',
      <ClimateEntityStateAttribute.HVAC_ACTION: 'hvac_action'>: <HVACAction.HEATING: 'heating'>,
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.OFF: 'off'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 50.0,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 5.0,
      <ClimateEntityStateAttribute.PRESET_MODE: 'preset_mode'>: 'automatic',
      <ClimateEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
        'automatic',
        'temperature_drop',
        'big_temperature_drop',
      ]),
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ClimateEntityFeature: 401>,
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 0.1,
      <ClimateEntityStateAttribute.TARGET_TEMPERATURE: 'temperature'>: 21.0,
    }),
    'context': <ANY>,
    'entity_id': 'climate.heating_circuit_2_lattialammitys',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'heat',
  })
# ---
